@@ -4,6 +4,7 @@
 - Cut startup time in half by lazy loading optional modules
 - Adding support for tmux clipboard and cleaning clipboard code (by Stephen)
 - "copy" now default to "url" and works coherently 
+- hide pictures which are from blocked URL (and hide IMG links pointing to blocked URL)
 - BUGFIX: "info" was sometimes returning the wrong cleaning method
 - BUGFIX: history latest items was sometimes overwritten with multiple back/forward
 - PACKAGING: use hatch-requirements-txt (by link2xt)
